--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -1,4 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap");
+@font-face {
+  font-family: "Caveat Brush";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/caveat-brush-v6-latin-regular.eot");
+  src: local("Caveat Brush"), local("CaveatBrush-Regular"),
+    url("../fonts/caveat-brush-v6-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/caveat-brush-v6-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../fonts/caveat-brush-v6-latin-regular.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/caveat-brush-v6-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../fonts/caveat-brush-v6-latin-regular.svg#CaveatBrush")
+      format("svg"); /* Legacy iOS */
+}
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap");
 
 $titleFont: "Caveat Brush", cursive;
