--- a/src/styles/components/_App.scss
+++ b/src/styles/components/_App.scss
@@ -1,3 +1,9 @@
 .app__wrapper {
   height: 100%;
+  &--male {
+    background: lighten($blue, 25%);
+  }
+  &--female {
+    background: lighten($pink, 25%);
+  }
 }
