--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -18,8 +18,14 @@
 }
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap");
+
 $titleFont: "Caveat Brush", cursive;
 $secondaryFont: "Source Sans Pro", sans-serif;
+$listFont: "Patrick Hand", cursive;
+$kalam: "kalam", cursive;
 $blue: rgb(84, 84, 216);
 $pink: rgb(248, 82, 132);
 $yellow: #ffe74c;
