--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,3 +5,8 @@
 @import "./components/Search";
 @import "./components/Toggle";
 @import "./components/DropDown";
+@import "./components//Header";
+@import "./components/Results";
+@import "./components/SingleList";
+@import "./components/DoubleList";
+@import "./components/RadioButtons";
