--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -1,12 +1,6 @@
 .home__wrapper {
-  height: 100%;
+  min-height: 100vh;
   position: relative;
-  &--male {
-    background-image: linear-gradient(lighten($blue, 20%), lighten($blue, 40%));
-  }
-  &--female {
-    background-image: linear-gradient(lighten($pink, 20%), lighten($pink, 40%));
-  }
   .home__title {
     text-align: center;
     font-family: $titleFont;
@@ -41,27 +35,29 @@
       display: block;
     }
     &--girl {
-      width: 250px;
+      width: 200px;
       @media only screen and (min-width: 600px) {
         right: 2rem;
         bottom: 1rem;
       }
-      @media only screen and (min-width: 600px) {
+      @media only screen and (min-width: 1000px) {
         right: 5rem;
         bottom: 3rem;
+        width: 250px;
       }
     }
     &--boy {
       left: 5rem;
       bottom: 5rem;
-      width: 210px;
+      width: 160px;
       @media only screen and (min-width: 600px) {
         left: 5rem;
         bottom: 1rem;
       }
-      @media only screen and (min-width: 600px) {
+      @media only screen and (min-width: 1000px) {
         left: 5rem;
         bottom: 3rem;
+        width: 210px;
       }
     }
   }
