change app name in header

--- a/src/styles/components/_DropDown.scss
+++ b/src/styles/components/_DropDown.scss
@@ -50,6 +50,8 @@
       text-overflow: ellipsis;
       cursor: pointer;
       border: none;
+      border-top: 1px solid #555;
+
       font-size: 1.8rem;
       font-weight: bold;
       &:hover {
